test/negative/306_unknown_type.fx
// expect: not found
val x: nosuch_t = 0
println(x)
